fixed some minor styling issues

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ h1 {font-size: 2.7em; border-bottom: 3px dotted #d1d88d; color: #3e606f; text-al
 h2 {font-size: 1.1em; color: #d1d88d;}
 
 .clearfloat {
-	clear: both;
+clear: both;
 }
 
 body {
@@ -41,7 +41,6 @@ color: #193441;
 width: 900px;
 margin: 20px auto;
 border: 8px solid #91aa9d;
-
 background-color: #fcfff5;
 }
 
@@ -52,7 +51,7 @@ float: left;
 }
 
 #innerRight{
-margin: 20px;
+margin: 20px 20px 10px;
 width: 500px;
 float: left;
 }
@@ -73,6 +72,7 @@ color: #3e606f;
 }
 
 </style>
+</script>
 </head>
 <body>
 
@@ -90,6 +90,7 @@ color: #3e606f;
 		<br class="clearfloat" />
 	</div>
 <br class="clearfloat" />	
+	
 </div>
 
 </body>
