--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>I'm a guy.</title>
 <style type="text/css">
 
@@ -81,7 +82,6 @@ color: #3e606f;
 }
 
 </style>
-</script>
 </head>
 <body>
 
