adjusted spacing/breakdown of paragraphs

--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@ float: left;
 .dots {
 display: block;
 margin: auto;
-margin-top: 8px;
-margin-bottom: 6px;
+margin-top: 15px;
+margin-bottom: 8px;
 width: 150px;
 height: 5px;
 }
 
 .bio {
-margin: 12px 0;
+margin: 18px 0;
 font: .99em arial, sans-serif;
 }
 
@@ -91,11 +91,9 @@ color: #3e606f;
 	<div id="innerRight">
 		<h1>Jonnie Dredge</h1>
 		<img src="images/dots.png" alt="green dots" class="dots">
-		<p class="bio">I've been a music guy most of my life--started with a basic music class at age 4 and continued on to study cello, guitar, percussion, piano, and voice through high school.  I got my bachelor's degree in jazz studies and my master's in music composition and audio production.  I've written, recorded, and produced music for short films, TV, and interactive media.  It's been pretty cool.</p>
-		<p class="bio">Somewhere along the way I decided I needed a website, and I decided to make it myself (<a href="http://www.jonniedredge.com" target="_blank">check it out</a>, if you wish).  That was pretty neat, and a few months later I had a web design job (surprise!).</p>
+		<p class="bio">I've been a music guy most of my life--started with a basic music class at age 4 and continued on to study cello, guitar, percussion, piano, and voice through high school.  I got my bachelor's degree in jazz studies and my master's in music composition and audio production.  I've written, recorded, and produced music for short films, TV, and interactive media.  It's been pretty cool. Somewhere along the way I decided I needed a website, and I decided to make it myself (<a href="http://www.jonniedredge.com" target="_blank">check it out</a>, if you wish).  That was pretty neat, and a few months later I had a web design job (surprise!).</p>
 		<p class="needlesslyLargeText">. . . more things happened . . .</p>
-		<p class="bio">Now I have a semi-but-not-quite web developer position at sizeable internet company and in order to get on the career path I want I'm going to need some formal education in computer science.  So here I am.  Learning stuff and what have you. I still make music. 
-		<p class="bio last">I use a few different code editors and IDEs regularly, including Sublime, Eclipse, Xcode, and sometimes good old fashioned VIM.</p>
+		<p class="bio last">Now I have a semi-but-not-quite web developer position at sizeable internet company and in order to get on the career path I want I'm going to need some formal education in computer science.  So here I am.  Learning stuff and what have you. I still make music, too. I use a few different code editors and IDEs regularly, including Sublime, Eclipse, Xcode, and sometimes good old fashioned VIM.</p>
 		
 	</div>
 <br class="clearfloat" />	
